--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
-  <script src="https://code.jquery.com/jquery.js"></script>
 </head>
-
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/home.html">Note Taker
+    <a class="navbar-brand" href="/">Note Taker
     </a>
   </nav>
   <div class="container">
@@ -25,5 +22,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/assets/js/index.js"></script>
 </body>
-
 </html>
